# hyprplug

./: .clang-format  hyprpm.toml
hyprorganize/: CMakeLists.txt  Makefile  main.cpp
